--- a/hellow2.html
+++ b/hellow2.html
@@ -4,11 +4,7 @@
         <title>Hello!</title>
     </head>
     <body>
-<<<<<<< HEAD
-        <h1>Welcome to my website!!</h1>
-=======
-        <h1 style="color:blue;">Welcome to my website!</h1>
->>>>>>> ebd8fd855adeccd2f9fbada8bb99270cd1748099
+        <h1 style="color:blue;">Welcome to my website!!</h1>
         <h2>Hello</h2>
         Hello, world!
     </body>
